environments/dev-01/dg-lite-frontend/dg-lite-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dg-lite-frontend
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
    external-dns.alpha.kubernetes.io/hostname: app.dev.dg-lite.com
    external-dns.alpha.kubernetes.io/ttl: 10
spec:
  tls:
    - secretName: dg-lite-frontend
      hosts:
        - app.dev.dg-lite.com
        - dg-lite-aws.danward.me
  rules:
    - host: app.dev.dg-lite.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: dg-lite-frontend
                port:
                  number: 8080
    - host: dg-lite-aws.danward.me
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: dg-lite-frontend
                port:
                  number: 8080
